welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: missing arguments for method abs in object Math;
follow this method with `_' if you want to treat it as a partially applied function
	{ if (Math.abs(a-10)=Math.abs(b-10){return 0})return a} 
                   ^close10:4: error: type mismatch;
 found   : Unit
 required: Int
	{ if (Math.abs(a-10)=Math.abs(b-10){return 0})return a} 
          ^