welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {

	if (Math.abs(a-10)<Math.abs(b-10)) 
	{ if (Math.abs(a-10)=Math.abs(b-10){return 0})return a} 
	else 
	{ return b}
}
